--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "tgc-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://nxt9b4fibh.execute-api.us-east-1.amazonaws.com/dev",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -16,6 +15,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
